# creative-automation-pipeline

./: .env.example  .gitignore  README.md  prompt_config.yaml  pyproject.toml
app/: deps.py  main.py
app/routes/: assets.py  brands.py  campaigns.py
brand_profiles/: spring_glow.yaml  trdelnik_co.yaml
locale_profiles/: cs-CZ.yaml  de-DE.yaml  en-US.yaml  ja-JP.yaml
pipeline/: __init__.py  cli.py  models.py  orchestrator.py  runner.py
pipeline/analytics/: __init__.py  trace.py
pipeline/brand/: __init__.py  registry.py
pipeline/copy/: __init__.py  localizer.py
pipeline/locale/: __init__.py  registry.py
pipeline/processing/: image_processor.py  ratios.py
pipeline/prompt/: __init__.py  composer.py  config.py
pipeline/providers/: base.py  openai_provider.py  openai_text.py  text_llm.py
pipeline/storage/: filesystem.py
prompt_templates/: skeleton_banner_v1.j2  skeleton_story_v1.j2  skeleton_v1.j2
tests/: conftest.py  test_brand_registry.py  test_composer.py  test_image_processor.py  test_locale_registry.py  test_localizer.py  test_models.py  test_orchestrator.py  test_prompt_config.py  test_runner.py  test_runner_integration.py  test_storage_and_ratios.py  test_trace.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/src/: App.vue  style.css
